--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
     "nedb": "^1.8.0",
     "vodal": "^2.1.0",
     "vue": "^2.3.3",
+    "vue-context-menu": "^2.0.4",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
