--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "fastclick": "^1.0.6",
+    "mavon-editor": "^2.1.8",
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
