--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "mavon-editor": "^2.1.3",
+    "mockjs": "^1.0.1-beta3",
     "nedb": "^1.8.0",
     "vodal": "^2.1.0",
     "vue": "^2.3.3",
